# Lab2.19

./: README.md  pyproject.toml
data/: ind.json
prog/: ind.py  ind_hard.py
